# bcore

./: .gitignore  CFD_GENERALISATION.md  CMakeLists.txt  CONTRIBUTING.md  COPYING  DIFFICULTY_DERIVATIVE.md  ICU_ACCEPTANCE_RECORD.md  ICU_CHILD.md  INSTALL.md  NOTICE  OPTION_SERIES_FREEZE.md  OPTION_TOKENIZATION.md  PQ-README.md  README-CHANGES.md  README.md  SECURITY.md  SENDASSET_SKELETON.md  asset-readme.md  capture_tip_hash.sh  generate_tensor_vectors.py  model-readme.md  run_tests_verbose.sh  spv-readme.md
src/: CMakeLists.txt  addresstype.cpp  addresstype.h  apicomponents.h  arith_uint256.cpp  arith_uint256.h  bitcoin-cli.cpp  blockencodings.cpp  blockencodings.h  chain.h  chainparams.cpp  chainparamsbase.cpp  chainparamsbase.h  clientversion.cpp  coins.cpp  coins.h  coins_asset_delta.h  compressor.h  core_io.h  core_read.cpp  core_write.cpp  init.cpp  key.cpp  key.h  key_io.cpp  logging.cpp  mldsakey.cpp  mldsakey.h  modeldb.cpp  modeldb.h  net.cpp  net.h  net_processing.cpp  net_processing.h  netgroup.h  netmessagemaker.h  onion_diversity.cpp  onion_diversity.h  outputtype.cpp  outputtype.h  (+20 more)
src/assets/: asset.cpp  asset.h  asset_parser_v1.cpp  canonical_vk.cpp  canonical_vk.h  icu_acceptance.h  icu_acceptance_record.cpp  icu_acceptance_record.h  icu_payload.cpp  icu_payload.h  kyc_delegation.cpp  kyc_delegation.h  registry.h  sighash_utils.h
src/bench/: CMakeLists.txt  asset_validation.cpp  build_gen_block.sh  gen_tensorcash_block.cpp  groth16_verify.cpp  mldsa.cpp  presync_load.cpp  sidecar_memory.cpp  vdf_verify.cpp  wallet_migration.cpp
src/common/: args.cpp  args.h  config.cpp  init.cpp
src/consensus/: consensus.h  difficulty_cfd.cpp  difficulty_cfd.h  model_verification.cpp  model_verification.h  params.h  scalar_cfd.cpp  scalar_cfd.h  scalar_cfd_leaf.cpp  scalar_cfd_leaf.h  scalar_cfd_snapshot.cpp  scalar_cfd_snapshot.h  tx_check.cpp  tx_verify.cpp  tx_verify.h  validation.h  zk_utils.h
src/crypto/: CMakeLists.txt  groth16.cpp  groth16.h  mldsakeygen.cpp  mldsakeygen.h  mldsaverify.cpp  mldsaverify.h
src/index/: blockfilterindex.cpp  icu_acceptance_index.cpp  icu_acceptance_index.h
src/init/: common.cpp
src/interfaces/: chain.h  mining.h  wallet.h
src/kernel/: CMakeLists.txt  chainparams.cpp  chainparams.h  genesis_proof.h  genesis_test_proof.h
src/node/: blockmeta.cpp  blockmeta.h  blockstorage.cpp  blockstorage.h  chainstate.cpp  context.cpp  context.h  extapi.cpp  extapi.h  interfaces.cpp  miner.cpp  miner.h  model_validation_shims.cpp  model_validation_shims.h  peerman_args.cpp  psbt_mldsa.cpp  psbt_mldsa.h  warnings.cpp
src/policy/: policy.cpp  policy.h
src/primitives/: block.cpp  block.h  proofblob.cpp  proofblob.h  transaction.cpp  transaction.h
src/qt/: CMakeLists.txt  activecontractstab.cpp  activecontractstab.h  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  assetbalancewidget.cpp  assetbalancewidget.h  assetpricetab.cpp  assetpricetab.h  bantablemodel.cpp  bantablemodel.h  bitcoin.cpp  bitcoin.h  bitcoinaddressvalidator.cpp  bitcoinaddressvalidator.h  bitcoinamountfield.cpp  bitcoinamountfield.h  bitcoingui.cpp  bitcoingui.h  bitcoinunits.cpp  bitcoinunits.h  bridgesessionmanager.cpp  bridgesessionmanager.h  bridgesessionstab.cpp  bridgesessionstab.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  commitmentproofdialog.cpp  commitmentproofdialog.h  contractdetaildialog.cpp  contractdetaildialog.h  contractregistrymodel.cpp  (+169 more)
src/rpc/: assets.h  bip322.cpp  bip322.h  blockchain.cpp  blockheader_generated.h  client.cpp  cosign.cpp  custom.cpp  custom.h  mining.cpp  net.cpp  node.cpp  option_series.cpp  proof_generated.h  proof_verify.cpp  proof_verify.h  rawtransaction.cpp  register.h  rotateicu.cpp  scalar.cpp  server_util.cpp  util.cpp  validation_generated.h
src/script/: interpreter.cpp  interpreter.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.h  sign.cpp  signingprovider.cpp  signingprovider.h  solver.cpp  solver.h
src/test/: CMakeLists.txt  CPP_GOLDEN_VECTOR_INTEGRATION.md  README_ZK_TESTING.md  argsman_tests.cpp  asset_arithmetic_tests.cpp  asset_distribution_tests.cpp  asset_edge_tests.cpp  asset_icu_sighash_tests.cpp  asset_kyc_delegation_tests.cpp  asset_kyc_sighash_tests.cpp  asset_registry_tests.cpp  asset_tests.cpp  asset_validation_tests.cpp  asset_zk_binding_tests.cpp  asset_zk_consensus_tests.cpp  asset_zk_robustness_tests.cpp  asset_zk_tests.cpp  asset_zk_validation_tests.cpp  assets_bond_tests.cpp  blockchain_tests.cpp  blockencodings_tests.cpp  blockfilter_index_tests.cpp  blockfilter_tests.cpp  blockmanager_tests.cpp  blockmeta_tests.cpp  bloom_tests.cpp  chainparams_tests.cpp  chainstate_asset_guard_tests.cpp  chainwork_nbits_selection_tests.cpp  coins_asset_overlay_tests.cpp  coinstatsindex_tests.cpp  consensus_vdf_flag_tests.cpp  cosign_tests.cpp  cosign_tests_plan.md  crypto_mldsa_tests.cpp  debug_block_100_hash.cpp  debug_height_110_hash.cpp  denialofservice_tests.cpp  difficulty_cfd_script_tests.cpp  difficulty_cfd_tests.cpp  (+76 more)
src/util/: CMakeLists.txt  asmap.cpp  asmap.h  chaintype.cpp  chaintype.h  gen_embedded_asmap.cmake  proofblob_utils.h  subprocess.h
src/vdf/: VdfGenerate.cpp  VdfGenerate.h  VdfVerify.cpp  VdfVerify.h
src/verification/: bcred_table_r1024.cpp  bcred_table_r1024.h  pow_v3.cpp  pow_v3.h  quick_verifier.cpp  quick_verifier.h  verification_utils.cpp  verification_utils.h
src/wallet/: CMakeLists.txt  asset_registration.cpp  asset_registration.h  coincontrol.h  context.h  contract.cpp  contract.h  crosschainmanager.cpp  crosschainmanager.h  difficulty_contract.cpp  difficulty_contract.h  ethhtlcbackend.cpp  ethhtlcbackend.h  fairsign.h  feebumper.cpp  fees.cpp  init.cpp  interfaces.cpp  keywrap_utils.cpp  keywrap_utils.h  option_series.cpp  option_series.h  receive.cpp  receive.h  scalar_cfd_contract.cpp  scalar_cfd_contract.h  scalar_note_pair.cpp  scalar_note_pair.h  scriptpubkeyman.cpp  spend.cpp  (+11 more)
(+486 files in other folders)
